// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProofDetails Screen renders correctly with an unverified proof Unverified proof view should be rendered correctly 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    testID="com.ariesbifold:id/UnverifiedProofView"
  >
    <View>
      <View
        style={
          Object {
            "paddingHorizontal": 20,
            "paddingVertical": 30,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "flex-start",
              "marginTop": 70,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "bold",
                },
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 32,
                  "fontWeight": "normal",
                },
              ]
            }
          >
            Verifier.ProofVerificationFailed
          </Text>
        </View>
        <
          height={200}
          style={
            Object {
              "alignSelf": "center",
              "marginTop": 20,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "margin": 20,
            "marginTop": "auto",
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": 10,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityLabel="Verifier.GenerateNewQR"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#42803E",
                "borderRadius": 4,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/GenerateNewQR"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                      false,
                      false,
                    ],
                  ]
                }
              >
                Verifier.GenerateNewQR
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "marginBottom": 10,
              "width": "100%",
            }
          }
        >
          <View
            accessibilityLabel="Verifier.BackToList"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#42803E",
                "borderRadius": 4,
                "borderWidth": 2,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/BackToList"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Array [
                      Object {
                        "color": "#42803E",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                      false,
                      false,
                    ],
                  ]
                }
              >
                Verifier.BackToList
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`ProofDetails Screen with a verified proof record renders correctly when history is false 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    testID="com.ariesbifold:id/ProofDetailsView"
  >
    <View>
      <View
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <View
          style={
            Object {
              "paddingHorizontal": 30,
              "paddingTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "backgroundColor": "#313132",
                "borderColor": "#0099FF",
                "borderRadius": 50,
                "borderWidth": 3,
                "height": 100,
                "justifyContent": "center",
                "marginBottom": 15,
                "overflow": "hidden",
                "width": 100,
              }
            }
          >
            < />
          </View>
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "bold",
                  },
                  undefined,
                ]
              }
            >
              Verifier.InformationReceived 
            </Text>
            <Text
              maxFontSizeMultiplier={2}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }
            >
              Verifier.InformationReceivedDetails
            </Text>
          </Text>
        </View>
        <View
          style={
            Object {
              "flexGrow": 1,
              "marginHorizontal": 30,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 15,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "margin": 20,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 15,
              }
            }
          >
            <View
              accessibilityLabel="Verifier.GenerateNewQR"
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                Object {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#42803E",
                  "borderRadius": 4,
                  "opacity": 1,
                  "padding": 16,
                }
              }
              testID="com.ariesbifold:id/GenerateNewQR"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 18,
                        "fontWeight": "normal",
                      },
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "textAlign": "center",
                        },
                        false,
                        false,
                        false,
                      ],
                    ]
                  }
                >
                  Verifier.GenerateNewQR
                </Text>
              </View>
            </View>
          </View>
          <View
            accessibilityLabel="Verifier.BackToList"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              Object {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderColor": "#42803E",
                "borderRadius": 4,
                "borderWidth": 2,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/BackToList"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Array [
                      Object {
                        "color": "#42803E",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                      false,
                      false,
                    ],
                  ]
                }
              >
                Verifier.BackToList
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`ProofDetails Screen with a verified proof record renders correctly when history is true 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <RCTScrollView
    style={
      Object {
        "flexGrow": 1,
      }
    }
    testID="com.ariesbifold:id/ProofDetailsHistoryView"
  >
    <View>
      <View
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 30,
              "marginVertical": 30,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "bold",
                  },
                ]
              }
            >
              Verifier.ConnectionLessLabel
            </Text>
             
            ProofRequest.ShareFollowingInformation
          </Text>
        </View>
        <View
          style={
            Object {
              "flexGrow": 1,
              "marginHorizontal": 30,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 15,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
